--- a/survey.html
+++ b/survey.html
@@ -1,22 +1,30 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Online Survey Form</title>
     <link rel="stylesheet" href="survey.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <h1>Research Study Survey</h1>
     <form id="surveyForm" onsubmit="return validateForm()">
-      
-      <div class="form-group">
-        <label for="rating">Rating (1-5):</label>
-        <input type="number" id="rating" name="rating" min="1" max="5" >
-        <p class="error" id="ratingError"></p>
-    </div>
-      <button type="submit">Submit</button>
+
+        <div class="form-group">
+            <label for="feedback">Feedback (no special characters):</label>
+            <textarea id="feedback" name="feedback"></textarea>
+            <p class="error" id="feedbackError"></p>
+        </div>
+        <div class="form-group">
+            <label for="rating">Rating (1-5):</label>
+            <input type="number" id="rating" name="rating" min="1" max="5">
+            <p class="error" id="ratingError"></p>
+        </div>
+        <button type="submit">Submit</button>
     </form>
     <script src="survey.js"></script>
-  </body>
+</body>
+
 </html>
