--- a/survey.html
+++ b/survey.html
@@ -7,8 +7,14 @@
     <link rel="stylesheet" href="survey.css" />
   </head>
   <body>
-    <h1>Research Study Survey</h1>
     <form id="surveyForm" onsubmit="return validateForm()">
+      <h1 class="title">Online Survey Form</h1>
+      <p>
+        This is a survey being run by Kreativ company to evaluate the newly
+        launched MOTIONS website. Therefore, your responses will be highly
+        appreciated and it will help us improve the delivery of services on
+        behalf of MOTIONS. Thank you!
+      </p>
       <button type="submit">Submit</button>
     </form>
     <script src="survey.js"></script>
