--- a/survey.html
+++ b/survey.html
@@ -32,6 +32,7 @@
 
           <label for="age">Age</label>
           <input type="number" id="age" name="age" min="1" />
+          <p class="error" id="ageError"></p>
 
           <label
             >Have you ever purchased a product or service from our
